--- a/front/src/Css/header.css
+++ b/front/src/Css/header.css
@@ -1,18 +1,8 @@
-#navegacion{
-    width: 100%;
+.header{
     display: flex;
-    justify-content: space-around;
+    width: 100%;
 }
 
-.navegacion{
-    list-style: none;
-    display: flex;
-    justify-content: space-around;
-}
-#logo, #insta{
-    width: 50px;
-    height: 50px;
-}
-header {
-    width: max-content;
+.navBar{
+    width: 100%;
 }
