Consumiendo la api de maps le agruegue que con un selector le aparezcan los mapas de los centros de salud correspondientes, faltaria crear algun enlace a algun sitio web que nos lleve a un apartado creado por nosotros para ver mas informacion del lugar

--- a/front/src/Css/footer.css
+++ b/front/src/Css/footer.css
@@ -1,24 +1,24 @@
-#ubicaciones{
-    list-style: none;
-    margin: auto;
-    padding: 0;
-
+#ubicaciones {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px , 1fr));
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     gap: 32px;
 }
-.imgUbicacion{
+
+.imgUbicacion {
     width: 10em;
 }
-#telefonos1{
+
+#telefonos1 {
     list-style: none;
     margin: auto;
     padding: 0;
 
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px , 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 32px;
 }
-.imgTelefono{
+
+.imgTelefono {
     width: 10em;
 }
