acomode header, intente acomodar carrusel y cards pero falta ajustar tamaño, cambie fuente de letras

--- a/front/src/Css/header.css
+++ b/front/src/Css/header.css
@@ -1,8 +1,40 @@
 .header{
+    position: fixed;
+    z-index: 1000;
     display: flex;
     width: 100%;
+    background-color: lawngreen;
 }
 
 .navBar{
+    
     width: 100%;
+    
 }
+
+.navBar .nav-link {
+    color: rgb(0, 0, 0);
+    transition: color 0.3s ease;
+    background-color: white;
+    padding: 10px 15px;
+    border-radius: 8px;
+    margin: 0 5px;
+    font-family: 'Playfair Display', serif;
+  }
+  
+  .navBar .nav-link:hover {
+    color: rgb(2, 91, 255);
+    background-color: #ffffff;
+  }
+  
+  .navBar .nav-link.active {
+    font-weight: bold;
+    color: red;
+    background-color: #ffffff;
+  }
+  
+  .navBar .nav-link img {
+    /* Estilos específicos para la imagen dentro de Nav.Link (ícono de Instagram) */
+    border-radius: 0; /* Restablecer cualquier borde redondeado que pueda heredar */
+    margin: 0; /* Restablecer cualquier margen que pueda heredar */
+  }
