Solo queda trabajar lo que pase por wp

--- a/front/src/Css/footer.css
+++ b/front/src/Css/footer.css
@@ -2,9 +2,10 @@
     background-color: #333;
     color: white;
     padding: 20px;
+    font-family: 'Playfair Display', serif;
   }
   
-  .container {
+  .containerFooter {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
