--- a/front/src/Css/contact.css
+++ b/front/src/Css/contact.css
@@ -1,7 +1,12 @@
-.container{
-    height: 100%;
+.MainContacto{
+  background-color: #82E0AA;
+}
+.container-Contacto{
+  background-color: #82E0AA;
+  border-radius: 15px;
 }
 .contact-section {
+    background-color: #82E0AA;
     margin-top: 180px;
     margin-bottom: 40px;
     display: grid;
@@ -11,6 +16,8 @@
   .contact-info,
   .contact-form {
     width: 45%;
+    border: 3px solid  black;
+    border-radius: 15px;
   }
   
   .contact-info {
@@ -41,4 +48,9 @@
   .sucursal {
     width: 100%;
     margin-top: 20px;
+  }
+
+  .negritas{
+    font-weight: bold;
+
   }
