--- a/front/src/Css/contact.css
+++ b/front/src/Css/contact.css
@@ -1,55 +1,85 @@
-.MainContacto{
-  background-color: #82E0AA;
+.MainContacto {
+  background-color: #82c294;
+  padding: 20px;
 }
-.container-Contacto{
-  background-color: #82E0AA;
+
+.container-Contacto {
+  background-color: #82c294;
   border-radius: 15px;
+  padding: 20px;
 }
+
 .contact-section {
-    background-color: #82E0AA;
-    margin-top: 65px;
-    display: grid;
+  background-color: #82c294;
+  margin-top: 65px;
+  display: grid;
+  grid-template-columns: 100%;
+  gap: 20px;
+}
+
+@media (min-width: 768px) {
+  .contact-section {
     grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
   }
+
   .contact-info,
   .contact-form {
-    width: 45%;
-    border: 3px solid  black;
-    border-radius: 15px;
-  }
-  
-  .contact-info {
-    margin-right: 5%; 
-  }
-  
-  .contact-info h2,
-  .contact-form h2 {
-    margin-bottom: 20px;
-  }
-  
-  .contact-form form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .contact-form form input,
-  .contact-form form textarea {
-    margin-bottom: 15px;
-    padding: 10px;
-  }
-  
-  .contact-form form button {
-    padding: 10px 20px;
-  }
-
-  
-  .sucursal {
     width: 100%;
-    margin-top: 20px;
   }
 
-  .negritas{
-    font-weight: bold;
-
+  .contact-info {
+    margin-right: 0;
   }
+}
+
+.contact-info,
+.contact-form {
+  border: 3px solid black;
+  border-radius: 15px;
+  padding: 20px;
+}
+
+.contact-info h2,
+.contact-form h2 {
+  margin-bottom: 20px;
+}
+
+.contact-form form {
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-form form input,
+.contact-form form textarea {
+  margin-bottom: 15px;
+  padding: 10px;
+}
+
+.contact-form form button {
+  padding: 10px 20px;
+}
+
+.sucursal {
+  width: 100%;
+  margin-top: 20px;
+}
+
+.negritas {
+  font-weight: bold;
+}
+
+.map-container {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-top: 56.25%; /* Proporción 16:9 */
+}
+
+.map-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
