--- a/front/src/Css/mainhistoria.css
+++ b/front/src/Css/mainhistoria.css
@@ -1,12 +1,14 @@
-
 #vacioH{
     width: 100%;
     height: 80px;
-    background-color: #82E0AA;
+    background-color: #82c294;
 }
 .MainHisotia{
-    background-color: #82E0AA;
-      
+    background-color: #82c294;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 50px;
+
 }
 #imgH{
     max-width: 320px;
@@ -15,7 +17,7 @@
     border-radius: 15px;
     margin-right: 15px;
     margin-top: 15px;
-    
+
 }
 
 h1{
@@ -27,14 +29,14 @@ h1{
     font-family: 'Playfair Display', serif;
     border: 3px solid  black;
     border-radius: 15px;
-    
+
 }
 .text-box h1{
     font-size: 42px;
     text-decoration: underline;
     color: #020202;
-    
-    
+
+
 }
 
 .text-box p{
