creacion de login, modificacion de base de datos

--- a/front/src/Css/MainCartilla.css
+++ b/front/src/Css/MainCartilla.css
@@ -1,9 +1,9 @@
-#vacio{
+#vacioP{
     width: 100%;
     height: 80px;
   }
 .MainCartilla{
-  background-color: #82E0AA;
+  background-color: #ebebeb;
 }
   
 .divBusqueda{
