--- a/front/src/Css/MainNoticias.css
+++ b/front/src/Css/MainNoticias.css
@@ -1,13 +1,13 @@
 
 .row{
-    background-color: #82E0AA;
+    background-color: #ebebeb;
 }
 
 
 #vacio {
     width: 100%;
     height: 80px;
-    background-color: #82E0AA;
+    background-color: #ebebeb;
 }
 
 
