--- a/front/src/Css/contact.css
+++ b/front/src/Css/contact.css
@@ -1,16 +1,22 @@
+.VacioC{
+  width: 100%;
+  height: 500px !important;
+  background-color: #ebebeb;
+}
+
 .MainContacto {
-  background-color: #82E0AA;
+  background-color: #ebebeb;
   padding: 20px;
 }
 
 .container-Contacto {
-  background-color: #82E0AA;
+  background-color: #ebebeb;
   border-radius: 15px;
   padding: 20px;
 }
 
 .contact-section {
-  background-color: #82E0AA;
+  background-color: #ebebeb;
   margin-top: 65px;
   display: grid;
   grid-template-columns: 100%;
@@ -37,16 +43,19 @@
   border: 3px solid black;
   border-radius: 15px;
   padding: 20px;
+  color: #000000;
 }
 
 .contact-info h2,
 .contact-form h2 {
   margin-bottom: 20px;
+  color: #000000;
 }
 
 .contact-form form {
   display: flex;
   flex-direction: column;
+  color: #000000;
 }
 
 .contact-form form input,
@@ -62,17 +71,22 @@
 .sucursal {
   width: 100%;
   margin-top: 20px;
+  color: #000000;
 }
 
 .negritas {
   font-weight: bold;
+color: #000000;}
+
+p{
+ color: #000000;
 }
 
 .map-container {
   position: relative;
   width: 100%;
   height: 0;
-  padding-top: 56.25%; /* Proporción 16:9 */
+  padding-top: 56.25%;
 }
 
 .map-container iframe {
