--- a/front/src/Css/mainHome.css
+++ b/front/src/Css/mainHome.css
@@ -1,11 +1,11 @@
 .MainHome {
-  background-color: #82E0AA;
+  background-color: #ebebeb;
 }
 
 #vacio {
   width: 100%;
-  height: 80px;
-  background-color: #82E0AA;
+  height: 1100px !important;
+  background-color: #ebebeb;
 }
 
 #carrusel {
@@ -82,7 +82,7 @@
 .btn {
   position: relative;
   display: inline-block;
-  margin: 15px;
+  margin: 4px;
   padding: 15px 30px;
   text-align: center;
   font-size: 18px;
