--- a/front/src/Css/mainhistoria.css
+++ b/front/src/Css/mainhistoria.css
@@ -1,10 +1,10 @@
 #vacioH{
     width: 100%;
-    height: 80px;
-    background-color: #82E0AA;
+    height: 300px !important;
+    background-color: #ebebeb;
 }
 .MainHisotia{
-    background-color: #82E0AA;
+    background-color: #ebebeb;
     padding-left: 15px;
     padding-right: 15px;
     padding-bottom: 50px;
