--- a/front/src/Css/contact.css
+++ b/front/src/Css/contact.css
@@ -1,12 +1,8 @@
-.VacioC{
-  width: 100%;
-  height: 500px !important;
-  background-color: #ebebeb;
-}
+
 
 .MainContacto {
   background-color: #ebebeb;
-  padding: 20px;
+  padding-top: 60px;
 }
 
 .container-Contacto {
