--- a/front/src/Css/footer.css
+++ b/front/src/Css/footer.css
@@ -1,6 +1,6 @@
 .footer{
-    background-color: #333;
-    color: white;
+    background-color: #1f1f1f;
+    color: rgb(255, 255, 255);
     padding: 20px;
     font-family: 'Playfair Display', serif;
   }
@@ -10,6 +10,7 @@
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
+    
    
   }
   
@@ -17,7 +18,7 @@
     align-self: flex-end;
   }
 
-h6{
-  color: white;
+.txtFooter{
+  color: rgb(226, 226, 226);
 }
 
