--- a/front/src/Css/MainCartilla.css
+++ b/front/src/Css/MainCartilla.css
@@ -1,9 +1,7 @@
-#vacioP{
-    width: 100%;
-    height: 80px;
-  }
+
 .MainCartilla{
   background-color: #ebebeb;
+  padding-top: 40px;
 }
   
 .divBusqueda{
