--- a/front/src/Css/mainHome.css
+++ b/front/src/Css/mainHome.css
@@ -11,7 +11,8 @@
 
 
 #carruselImg {
-  max-width: 30em;
+  max-width: 40em;
+  
   margin: 120px auto 0;
   font-family: 'Playfair Display', serif;
 }
@@ -52,10 +53,11 @@
   width: 100%;
   height: 100%;
   border-radius: 15px;
+  
   position: absolute;
   top: 0;
   left: -100%;
-  background-image: linear-gradient(to right, #0fd850 0%, #f9f047 100%);
+  background-image: linear-gradient(to right, #60ba85 0%, #4f976c 100%);
   transition: .5s ease;
   z-index: -1;
 }
@@ -93,18 +95,19 @@
   font-size: 18px;
   letter-spacing: 1px;
   text-decoration: none;
-  color: #0fd850;
+  color: #346548;
   background: transparent;
   cursor: pointer;
   transition: ease-out 0.5s;
-  border: 2px solid #0fd850;
+  border: 2px solid #60ba85;
   border-radius: 10px;
-  box-shadow: inset 0 0 0 0 #0fd850;
+  box-shadow: inset 0 0 0 0 #60ba85;
 }
 
+/* btn cards */
 .btn:hover {
   color: white;
-  box-shadow: inset 0 -100px 0 0 #0fd850;
+  box-shadow: inset 0 -100px 0 0 #60ba85;
 }
 
 .btn:active {
@@ -147,7 +150,7 @@
   position: absolute;
   top: 0;
   left: -100%;
-  background-image: linear-gradient(to right, #0fd850 0%, #f9f047 100%);
+  background-image: linear-gradient(to right, #60ba85 0%, #4f976c 100%);
   transition: .5s ease;
   z-index: -1;
 }
@@ -179,7 +182,7 @@
   position: absolute;
   top: 0;
   left: -110%; 
-  background-image: linear-gradient(to right, #0fd850 0%, #f9f047 100%);
+  background-image: linear-gradient(to right, #60ba85 0%, #4f976c 100%);
   transition: .5s ease;
   z-index: -1;
 }
