--- a/front/src/Css/header.css
+++ b/front/src/Css/header.css
@@ -3,7 +3,7 @@
   position: fixed;
   z-index: 1000;
   width: 100%;
-  background-color: #60ba85;
+  background-color: #60ba859f;
   top: 0;
 }
 
@@ -12,13 +12,12 @@
 }
 
 #button {
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
   transition: color 0.3s ease;
-  background-color: white;
   padding: 10px 5px;
-  border-radius: 15px;
-  border: 1px solid black;
-  margin: 10 10px;
+  border: 2px solid white;
+  padding: 5px;
+  margin-left: 5px;
   position: relative;
   z-index: 1;
   overflow: hidden;
@@ -26,13 +25,12 @@
 }
 
 #button:hover {
-  color: #ffffff;
-  background-color: #ffffff;
+  color: #60ba85;
 }
 
 #button::after{
   content: "";
-  background: #4f976c;
+  background: #ffffff;
   position: absolute;
   z-index:  -1;
   padding: 10px 10px;
@@ -59,10 +57,6 @@
   margin: 0;
 }
 
-.instagram-icon {
-  color: white; 
-  font-size: 2em; 
-}
 
 .divHeaderLink a{
   margin-right: 5px;
