--- a/front/src/Css/mainHome.css
+++ b/front/src/Css/mainHome.css
@@ -1,20 +1,35 @@
-.MainHome {
-  background-color: #ebebeb;
-  padding-top: 5em;
+body, html{
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("https://cdn.lecturio.com/assets/Featured-image-Student-Blog-Hospital-Team.jpg") center/cover no-repeat;
 }
 
-#vacio {
+.contenedor-home-body{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 20px;
+}
 
-  height: 1100px !important;
-  background-color: #ebebeb;
+.cartas-mas-info{
+  width: 15em;
+  margin-left: 20px;
+}
+
+.cartas-mas-info img{
+  max-width: 100%; 
+  height: 250px;
+}
+
+.imagen-cards{
+  
+  object-fit: cover;
 }
 
 
 #carruselImg {
-  max-width: 40em;
   
-  margin: 120px auto 0;
-  font-family: 'Playfair Display', serif;
+  padding: 90px;
+  margin: auto;
+  max-width: 40em;
 }
 
 #img1 {
@@ -23,29 +38,28 @@
   height: 100%;
 }
 
-#horarios .divAncla{
-  padding: 1em;
-}
-
 #horarios .divAncla img {
   width: 30%;
 }
 
 #horarios {
-  font-family: 'Playfair Display', serif;
   text-decoration: none;
 }
 
 #hor1 {
-  border: 3px black solid;
+  border: 5px rgba(0, 0, 0, 0.699) solid;
   border-radius: 15px;
   margin-top: 5px;
   text-decoration: none;
-  color: black;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.543);
   position: relative;
   overflow: hidden;
   z-index: 1;
+}
+
+#hor1 p{
+  color: white;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.648);
 }
 
 #hor1::before {
@@ -53,11 +67,10 @@
   width: 100%;
   height: 100%;
   border-radius: 15px;
-  
   position: absolute;
   top: 0;
   left: -100%;
-  background-image: linear-gradient(to right, #60ba85 0%, #4f976c 100%);
+  background-image: linear-gradient(to right, #60ba8599 0%, #4f976c7a 100%);
   transition: .5s ease;
   z-index: -1;
 }
@@ -66,7 +79,7 @@
   left: 0;
 }
 
-.divAncla {
+.divAncla{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -83,7 +96,6 @@
 
 #cards {
   object-fit: fill;
-  font-family: 'Playfair Display', serif;
 }
 
 .btn {
@@ -104,10 +116,16 @@
   box-shadow: inset 0 0 0 0 #60ba85;
 }
 
+.columna-contenedor{
+  margin-left: 50px;
+}
+
 /* btn cards */
 .btn:hover {
-  color: white;
-  box-shadow: inset 0 -100px 0 0 #60ba85;
+  color: rgb(23, 96, 242) !important;
+  border: 2px solid rgb(23, 96, 242);
+  box-shadow: inset 0 -100px 0 0 #ffffff;
+
 }
 
 .btn:active {
@@ -118,7 +136,6 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  font-family: 'Playfair Display', serif;
 }
 
 #nodos1 > img {
