--- a/front/src/Css/mainhistoria.css
+++ b/front/src/Css/mainhistoria.css
@@ -1,56 +1,66 @@
-.MainHistoria{
-    background-color: #ebebeb;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-bottom: 50px;
-    padding-top: 7em;
 
-
-}
-.divHistoria{
-    width: 80%;
-    margin: auto;
-}
-#imgH{
-    max-width: 320px;
-    float: right;
-    border: 3px solid  black;
-    border-radius: 15px;
-    margin-right: 15px;
-    margin-top: 15px;
+.titulo-historia{
+color: white;
+text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.733);
+text-align: center;
+padding: 20px;
 
 }
 
-h1{
-    font-weight: bold;
+.historial-body{
+    display: flex;
+    justify-content: space-around;
+    padding: 20px;
 }
 
-.text-box{
+.parrafo-historia{
+    background-image: url("https://img.freepik.com/foto-gratis/fondo-papel-viejo-vendimia-grunge_1373-431.jpg?size=626&ext=jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    filter: drop-shadow(7px 7px 1px rgba(0, 0, 0, 0.551));
     color: black;
-    font-family: 'Playfair Display', serif;
-    border: 3px solid  black;
-    border-radius: 15px;
-
-}
-.text-box h1{
-    font-size: 42px;
-    text-decoration: underline;
-    color: #020202;
-
-
+    text-align: start;
+    max-width: 750px;
+    font-size: 20px;
+    padding: 20px;
 }
 
-.text-box p{
-    font-size: 16px;
-    color: #000000;
+.columna-img-historia{
+    display: flex;
+    flex-direction: column;
+    
 }
 
-.parrafoHistoria{
-    font-size: 30px !important;
-
-
+.imagen-hitoria1{
+    
+    filter: drop-shadow(5px 5px 1px  #00000082);
+    background-color: white;
+    height: 750px;
+    margin-bottom: 20px;
 }
 
-.parrafo1{
-    color: black;
+.imagen-hitoria1 p{
+    padding: 10px;
+    width: 500px;
+}
+.imagen-hitoria2 p{
+    padding: 10px;
+    width: 500px;
+}
+
+.imagen-hitoria2{
+    filter: drop-shadow(5px 5px 1px #00000082);
+    background-color: white;
+    height: 500px;
+    margin-bottom: 20px;
+}
+
+.columna-img-historia img{
+    
+    width: 500px;
+    /* filter: drop-shadow(10px 10px  #e2e3e7); */
+    
+    padding: 10px;
+    
 }
