cambios en los documentos

--- a/front/src/Css/mainHome.css
+++ b/front/src/Css/mainHome.css
@@ -1,8 +1,13 @@
-body,
-html {
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("https://cdn.lecturio.com/assets/Featured-image-Student-Blog-Hospital-Team.jpg") center/cover no-repeat;
-  letter-spacing: 0.2px;
+*{
+  box-sizing: border-box;
+}
 
+body{
+  margin: 0;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("https://cdn.lecturio.com/assets/Featured-image-Student-Blog-Hospital-Team.jpg") center/cover no-repeat;
+  min-height: 100vh;
+  position: relative;
+  padding-bottom: 14em;
 }
 
 .contenedor-home-body {
