--- a/front/src/Css/MainLogin.css
+++ b/front/src/Css/MainLogin.css
@@ -7,7 +7,7 @@
     align-content: center;
 }
 ::-webkit-input-placeholder{
-    color: #0fd850;
+    color: #8d8d8d;
 }
 .Login{
     background: #081b29df;
