--- a/front/src/Css/MainCartilla.css
+++ b/front/src/Css/MainCartilla.css
@@ -1,11 +1,24 @@
 
 .MainCartilla{
-  
   padding-top: 40px;
 }
   
 .divBusqueda{
-    display: flex;
-    width: 100%;
-    
+  display: flex;
+  justify-content: start;
+  flex-direction: row;
+  margin-bottom: 10px;
+}
+
+.input-buscar{
+  border: 3px solid rgba(0, 0, 0, 0.731);
+}
+
+.lupa{
+  height: 40px;
+  width: 40px;
+  background-color: rgba(255, 255, 255, 0.735);
+  border: none;
+  border-radius: 150px;
+  margin-left: 10px;
 }
