--- a/front/src/Css/editarAgente.css
+++ b/front/src/Css/editarAgente.css
@@ -1,11 +1,11 @@
-.body-agregar-usuario {
+.body-editar-usuario {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 20px;
+    padding: 20px;   
   }
   
-  .agregar-usuario-contenedor {
+  .editar-usuario-contenedor {
     background-color: #ffffff; /* Fondo blanco para el formulario */
     padding: 20px;
     border-radius: 8px;
@@ -14,25 +14,25 @@
     width: 100%;
   }
   
-  .agregar-usuario-titulo {
+  .editar-usuario-titulo {
     text-align: center;
     margin-bottom: 20px;
     color: #333;
   }
   
-  .agregar-usuario-formulario {
+  .editar-usuario-formulario {
     display: flex;
     flex-direction: column;
     gap: 15px;
   }
   
-  .agregar-usuario-label {
+  .editar-usuario-label {
     font-weight: bold;
     color: #555;
     margin-bottom: 5px;
   }
   
-  .agregar-usuario-input {
+  .editar-usuario-input {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -45,31 +45,30 @@
     margin-top: 20px;
   }
   
-  .boton-cancelar-usuario {
+  .boton-cancelar-usuario,
+  .boton-editar-usuario {
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .boton-cancelar-usuario {
     background-color: #dc3545;
     color: white;
-    transition: background-color 0.3s ease;
   }
   
   .boton-cancelar-usuario:hover {
     background-color: #c82333;
   }
   
-  .boton-agregar-usuario {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+  .boton-editar-usuario {
     background-color: #28a745;
     color: white;
-    transition: background-color 0.3s ease;
   }
   
-  .boton-agregar-usuario:hover {
-    background-color: #0069d9;
+  .boton-editar-usuario:hover {
+    background-color: #218838;
   }
   
